--- a/_posts/2023-08-17-Entropy.md
+++ b/_posts/2023-08-17-Entropy.md
@@ -24,12 +24,11 @@ toc:
 
 Your’e late. Again. Your final exam in probability theory starts in 30 minutes and the bus *is not showing up.* The pamphlet on the station says it arrives “approximately once every 10 minutes”, and you’ve already been waiting for 12 with no bus on the horizon. *What are the odds?! Why does this always happen???* 
 
-In an attempt to distract yourself from your anxiety and do something useful while you wait you start thinking: “Actually, what is the probability?” A bit more generally, say you were asked during the upcoming exam to write down a distribution that represents a bus arriving “approximately once every 10 minutes.” What would that distribution look like? Well, “once every 10 minutes” seems clear enough, but what does “approximately” mean here? How do we take into account that there's road construction seemingly _everywhere_ today, adding a bunch of variability to the travel times from the first station?
+In an attempt to distract yourself from your anxiety, you start thinking: “Actually, what is the probability?” Say you were asked during the exam to write down a distribution of a bus arriving “approximately once every 10 minutes”, what would that distribution look like? Well, “once every 10 minutes” seems clear enough, but what does “approximately” mean here? How do we take into account that there's road construction seemingly _everywhere_ today, adding a bunch of variability to the travel times from the first station?
 
-Modeling the uncertainty of a situation is not a problem limited to exams in introductory courses, especially where we have access to some of the affecting variables but not all. In fact, solving this problem is one of the most common tasks in scientific modeling, dressed up in different forms and in a range of diverse situations.
+Modeling the uncertainty of a situation is not a problem limited to exams, especially where we have access to some, but not all, of the affecting variables. In fact, solving this problem is one of the most common tasks in scientific modeling, dressed up in different forms and in a range of diverse situations. 
 
-The trick, of course, is to incorporate all of the information we have, without letting any information we don’t actually know sneak into our model.
-In this post we will explore how this sentiment translates into a precise mathematical statement, using said formulation to solve problems such as your frequently tardy bus, finding a distribution which appropriately uses all of our relevant knowledge without assuming anything beyond.
+The difficulty, of course, is to incorporate only the available information, without letting anything else sneak into the model. In this post we will translate this sentiment into a precise mathematical statement, useful for solving problems such as your frequently tardy bus, finding a distribution which appropriately uses all of our relevant knowledge without assuming anything beyond.
 
 ---
 
@@ -45,38 +44,38 @@ In an ideal world, the bus arrives _exactly_ every 10 minutes. Never any delays,
 
 So, in this idealized world, no matter what time you arrive at the bus stop, the most you will ever have to wait is 10 minutes. Of course, since the schedule is unknown, the probability that you wait any amount of time (smaller than 10 minutes) is the same. 
 
-This is the exact description of a uniform distribution between 1 minutes and 10 minutes:
+This is exactly the description of a uniform distribution between 1 and 10 minutes:
 $$
 \begin{equation}
 \forall\ t\in \left\{1,\cdots,10\right\}\qquad\quad P(T=t)=\frac{1}{10}
 \end{equation}
 $$
-where the random variable $T$ represents the amount of time you have to wait for the bus.
+where the random variable $T$ represents the arrival time of the bus.
 
-## Possible Delays - Noisy Model
+## Possible Delays - Infinite Delay Model
 
-The “bus arrives exactly every 10 minutes” model (hereinafter the “deterministic model”) is a good place to start, but is obviously unrepresentative of the situation you find yourself in. For one thing, you’ve already waited 12 minutes, which is impossible under this model. The reason the above model isn't representative is that busses can get delayed in their route and we have to take that into account when constructing our distribution.
+The deterministic model above, with a bus that arrives exactly every 10 minutes, is a good place to start. Obviously, however, it is unrepresentative of the situation you find yourself in. For one thing, you’ve already waited 14 minutes, which is impossible under said model. Additionally, busses can get delayed in their route, adding variability to their arrival times and we have to take that into account.
 
-One important feature of the deterministic model is that we gain information the more time we wait. If we’ve already waited for 9 minutes, we know for certain that the bus will arrive in the next minute. As we saw, we don't have this certainty in the real world scenario, so let’s examine how and why it’s violated.
+One important feature of the deterministic model is that we gain information the more time we wait. If we’ve already waited for 9 minutes, we know for certain that the bus will arrive in the next minute. As we saw, we don't have this certainty in the real world scenario.
 
-Let’s start by thinking of the opposite extreme than the deterministic model. So now let’s say that busses leave exactly every 10 minutes, but then they get delayed for time periods that are so wildly variable that their arrival times are essentially distributed uniformly from the time the first bus arrives to the arrival time of the last bus of the day.
+Let’s start by thinking of the opposite extreme than the deterministic model. So now let’s say that busses start their journey exactly 10 minutes apart, but then they get delayed for time periods that are so wildly variable that their arrival times are essentially distributed uniformly from the time the first bus arrives to the arrival time of the last bus of the day.
 
-In this extreme, waiting for any amount of time in the station gives us absolutely no information! The bus arrival times can effectively be thought of as independent events and so the time we still have to wait is unaffected by how long we have already waited. This property is known as *memorylessness*. 
+It may seem that this setting violates the sign that states that "busses arrive approximately every 10 minutes". Note though that, since a bus leaves every 10 minutes, there are $\frac{N}{10}$ busses distributed uniformly in the $N$ minutes from the first bus arrival to the time the last one arrives. So the average difference between two consecutive arrivals still turns out to be 10 minutes.
 
-Note though that, since a bus leaves every 10 minutes, there are $\frac{N}{10}$ busses distributed uniformly in the $N$ minutes from the first bus arrival to the time the last one arrives, so the average difference between two consecutive arrivals is still turns out to be 10 minutes.
+In this extreme, waiting for any amount of time in the station gives us absolutely no information! The bus arrival times can be effectively thought of as independent events and so the time to wait is independent of how long we have already waited. This property is known as *memorylessness*. 
 
 Amazingly, the _only_ discrete, memoryless, distribution is the geometric distribution:
 $$
 \begin{equation}
 \forall\ t=1,2,\cdots \qquad\quad P\left(T=t\right)=\theta\cdot\left(1-\theta\right)^{t}
 \end{equation}
-$$where $\theta\in[0,1]$ is a parameter of the distribution that we have to define in some manner. We can do so by reminding ourselves that _we know_ that a bus arrives approximately every 10 minutes; that is, the mean of the distribution has to be equal to 10. [Luckily for us, the geometric distribution is a well known distribution](https://en.wikipedia.org/wiki/Geometric_distribution) and it's mean is equal to:
+$$where $\theta\in[0,1]$ is a parameter of the distribution that has to be defined in some manner. _We know_ that a bus arrives approximately every 10 minutes, that is the mean of the distribution has to be equal to 10; we can use this to choose $\theta$. [Luckily for us, the geometric distribution is a well known distribution](https://en.wikipedia.org/wiki/Geometric_distribution) and it's mean is equal to:
 $$
 \begin{equation}
 \mathbb{E}[T]=\frac{1-\theta}\theta
 \end{equation}
 $$
-So, if we know that $\mathbb{E}[T]=M=10$, we can set $\theta=\frac{1}{M+1}$ to satisfy the constraint of the average arrival time. Here's the distribution:
+So, if we know that $\mathbb{E}[T]=M=10$, we can set $\theta=\frac{1}{M+1}$ to satisfy the constraint of the average arrival time. Here's the corresponding distribution:
 
 
 <div class="fake-img l-page">
@@ -93,9 +92,9 @@ style="display: inline-block; margin: 0 auto; ">
 
 ## Modeling Finite Delays 
 
-Okay, so a geometric distribution (or "noisy model" from now on) is much better than the deterministic model, but it doesn't make sense that a bus could be "infinitely" delayed. As long as the bus's route is sound and wasn't canceled or something, the bus should probably arrive within the same day, if not earlier. This is another tidbit of information we can take into account when defining our model. 
+Okay, so a geometric distribution (which we will call the "infinite delay model" from now on) is much better than the deterministic model, but it doesn't make sense that a bus could be "infinitely" delayed. As long as the bus's route is sound and wasn't canceled or something, the bus should probably arrive within the same day, if not earlier. This is another tidbit of information we can take into account when defining our model. In other words, we still believe that the variability between the delays is very large, but there is also a "maximal waiting time" which we will take into account. 
 
-So, how do we find a model that takes into account that the delays have to be finite? For the last two settings we had sound arguments which led us to a unique distribution of arrival times. This time however, there are numerous distributions that could fit our setting, the setting where the mean is known and the number of possible arrival times is finite. Here are three such possible distributions:
+So, how do we find a model that takes into account that the delays have to be finite? For the last two settings we had sound arguments which led us to a unique distribution of arrival times. This time however, there are numerous distributions that could fit our setting, the setting where the mean is known and the number of possible arrival times is finite. Here are three such possible distributions with a wait time of 50 minutes:
 
 <div class="fake-img l-page">
 <p align="center">
@@ -105,27 +104,24 @@ style="display: inline-block; margin: 0 auto; ">
 </p>
 </div>
 <div class="caption">
-    Three possible distributions to describe the bus arrival times under all of the constraints. In particular, all 3 of the distributions are defined on a finite set of values - that is, there is a maximal time the bus can be delayed - and the mean of all three distributions is $M=10$. Which of these distributions best describes the situation at hand? Can we be sure that they don't insert bias into the model? 
+    Three possible distributions to describe the bus arrival times under our constraints. In particular, all 3 of the distributions are defined on a finite set of values - that is, there is a maximal time the bus can be delayed - and the mean of all three distributions is $M=10$. Which of these distributions best describes the situation at hand? Can we be sure that they don't insert bias into the model? 
 </div>
-
-Okay, so now we have a couple of options for how to proceed. We could try to find an argument that is really convincing for why a particular distribution is the one that most naturally captures the situation at hand. From the last two iterations, it doesn't seem like such an argument will generalize to further complications, so maybe let's not do that for now. Another possibility is to try and generalize the problem and see whether there is a single overlapping framework we can use _for any possible complication_. We're going to try and do exactly that.
 
 ## A Broader Look
 
-If we take a step back for a moment, we can appreciate that maybe what we're looking for is more general than the issue of arrival times of busses. Abstracting the problem at hand reveals a much more fundamental question:
+If we take a step back for a moment, we can appreciate that what we're looking for is more general than the issue of arrival times of busses. Abstracting the problem at hand reveals a much more fundamental question:
 
+> **Given a set of constraints, is there a principled way to find a probabilistic model that will satisfy said constraints without assuming further information?**
 
-> **Given a set of constraints, is there a principled way to find a probabilistic model that will satisfy these constraints without assuming further information?**
+By principled we mean a single, unified, approach to choosing the distribution; no matter which constraints are given, we will know what needs to be done in order to find a distribution that satisfies them. Both the deterministic and geometric settings were definitely not solved in a principled manner: a different argument had to be made up for each specific case and were quite distinct from each other, predicated on our knowledge of esoteric properties of distributions. 
 
-By principled we mean a single, unified, approach to choosing the distribution; no matter which constraints are given, we will know what needs to be done in order to find a distribution that satisfies them. Both the deterministic and geometric settings were definitely not solved in a principled manner: a different argument had to be made up for each specific case, quite distinct from each other. Those arguments were predicated on our knowledge of esoteric properties of distributions and obviously won't transfer to more complex settings. 
-
-Well, how about we find a single way to solve problems this kind, one that we can always repeat and understand?
+Well, how about we find a single way to solve problems of this kind, one that we can always repeat and understand?
 
 ---
 
 # Maximum Entropy
 
-To choose between a set of possibilities, we need a criteria which will tell us which of the distributions is "better". This criterion is subjective, but important. Usually in mathematical modeling, distributions that do not insert any further bias are preferred - those that do not assume we have access to more information than we have observed. Simply put, we would usually prefer a model which is as "generic" as possible while still capturing quantities we care about. 
+To choose between a set of possibilities, we need a criterion which will tell us which distribution is "best". This criterion is subjective, but important. Usually in mathematical modeling, distributions that do not insert any further bias are preferred - those that do not assume we have access to more information than we have observed. Simply put, we would usually prefer a model which is as "generic" as possible while still capturing quantities we care about. 
 
 This sounds reasonable, but what does it even mean for a distribution to be generic? Consider the following two distributions:
 
@@ -138,10 +134,10 @@ style="display: inline-block; margin: 0 auto; ">
 </p>
 </div>
 <div class="caption">
-   Two different distributions, one that is close to uniform (left) and one that is closer to an indicator (right). Which of these is a more generic distribution?
+   Two different distributions, one that is close to uniform (left) and one that is closer to an indicator (right). Which of these is the more generic distribution?
 </div>
 
-The distribution on the left spreads out the probability almost equally among all possible outcomes. On the other hand, the one on the right assigns most of the probability to a single outcome. Which would you call more generic? 
+The distribution on the left spreads out the probability almost equally among all possible outcomes. Conversely, the one on the right assigns most of the probability to a single outcome. Which would you call more generic? 
 
 Well, the distribution on the right represents a very specific setting where one of the values is so much more probable than all of the other values. On the other hand, the distribution on the left is how we would describe a setting we know very little about. If we've only seen very few real-world samples, we would probably choose to model the empirical distribution with the more uniform distribution, since it assumes less. In particular, it doesn't assume that one of the values is significantly more probable to occur.
 
@@ -149,15 +145,15 @@ Let's try to build up a measure for the genericness of a distribution.
 
 ## Enter Shannon
 
-Looking at $P(X=x)$ for a specific value of $x$ already gives us a strong indication of whether a distribution is generic or not, right? If $P(x)$ <d-footnote>We will use this notation from now, since it's so much shorter while still being easy to understand</d-footnote> is quite large, then this is damning evidence that the distribution is not generic. Alternatively, when $P(x)$ is small for a specific value of $x$ it is rather hard to say whether the distribution is generic or not. We can use the fact that a probability of a specific instance informs us about genericness as a base ingredient to define the genericness of the whole distribution. In particular, a generic distribution will be one that, on average, is uninformative :
+Looking at $P(X=x)$ for a specific value of $x$ already gives us a strong indication of whether a distribution is generic or not, right? If $P(x)$ <d-footnote>We will use this notation from now, since it's so much shorter while still being easy to understand</d-footnote> is large, then it alone is damning evidence that the distribution is not generic. Alternatively, when $P(x)$ is small for a specific value of $x$ it is rather hard to say whether the distribution is generic or not, since the probability can still be large for a different value of $x$; we will say that the probability of the outcome is _uninformative_<d-footnote>For those versed in information theory: you will notice that syntactically we use _exactly the opposite_ word than in usual information theoretic contexts. However, semantically we mean the same as in information theory, and the same conclusion is reached (i.e. please don't be angry with us).</d-footnote>. We can use this as a base ingredient to define the genericness of the whole distribution. In particular, a generic distribution will be one that, on average, is uninformative:
 $$
 \begin{equation}
 \text{genericness}=\sum_x P(x)\cdot I(x)
 \end{equation}
 $$
-where $I(\cdot)$ represents the uninformative-ness of an observation $x$ and is small when the probability over $x$ indicates that the distribution is not generic and high otherwise.
+where $I(\cdot)$ represents the uninformative-ness of an observation $x$.
 
-There are many many choices for functions $I(\cdot)$ which behave as we abstractly described. But, it would be nice if the function $I(\cdot)$ would have the following properties:
+There are many many ways to define $I(\cdot)$ so it's behavior will match our abstract description. But, it would be _nice_ if the function $I(\cdot)$ could also have the following properties:
 
 1. As we said, values with higher probabilities are more informative (less uninformative), so $I(x)$ should be monotonically decreasing with $P(x)$
 2. Since we are going to attempt to find distributions that maximize the genericness, it would help if $I(\cdot)$ were continuous in $P(x)$ (so we could differentiate the genericness with respect to the probabilities). In turn, we need $I(x)$ to be continuous in $P(x)$
@@ -169,21 +165,21 @@ I(x_1\cdot x_2)=I(x_1)+I(x_2)
 \end{equation}
 $$
 
-Under these criteria, finding a specific possible function is perhaps suspiciously simple. Properties 1 and 2 are a given if $I(x)=f(\frac{1}{P(x)})$ and $f(\cdot)$ is a continuous, monotonically increasing function. Of these possible functions, the first that comes to mind with properties 3 and 4 is the logarithm <d-footnote>By logarithm we mean the natural logarithm, but we will use the information-theoretic notation $\log(x)=\ln(x)$</d-footnote>, which implies the following form for the uninformative-ness:
+Under these criteria, finding a specific form is (perhaps suspiciously) simple. Properties 1 and 2 are easily met if $I(x)=f(\frac{1}{P(x)})$ and $f(\cdot)$ is a continuous, monotonically increasing function. Of these possible functions, the first that comes to mind that combines properties 3 and 4 is the logarithm <d-footnote>By logarithm we mean the natural logarithm, but we will use the information-theoretic notation $\log(x)=\ln(x)$</d-footnote>, which implies the following form for the uninformative-ness:
 $$
 \begin{equation}
 I(x)=\log\left(\frac {1}{P(x)}\right)=-\log P(x)
 \end{equation}
 $$
-Incredibly, it turns out that the logarithm is the _only_ function that fulfills all of our required properties! Well, up to a constant anyway, a fact we will completely ignore.
+Incredibly, it turns out that the logarithm is the _only_ function that fulfills all of our required properties! <d-footnote>Well, up to a constant anyway, a fact we will completely ignore from now on.</d-footnote>
 
-So, as long as our earlier requirements for un-informativeness make sense, our measure of the genericness of a distribution will be given by:
+So, as long as our earlier requirements for un-informativeness make sense, the genericness of a distribution is given by:
 $$
 \begin{equation}
 \text{genericness}=-\sum_x P(x)\log P(x)
 \end{equation}
 $$
-Now, actually, this value has a much better name than "genericness"; it is the _entropy_ of a distribution, written as:
+Now, actually, this value has a much better name than "genericness"; it is the _entropy_ of a distribution, usually denoted by:
 $$
 \begin{equation}
 H(X)=-\sum_x P(x)\log P(x)
@@ -192,15 +188,15 @@ $$
 
 ## Back to Our Busses - a Sanity Check
 
-Before continuing on, let's see whether maximizing the entropy really results in the distribution we've chosen for the discrete model from earlier in this post.
+Before continuing on, let's see whether maximizing the entropy really results in the distribution we've chosen for the deterministic model from earlier in this post. A simple sanity check to see that we are faithful to our earlier work.
 
-For the discrete model, the only unknown factor is when you arrive between the equally spaced busses. So, the distribution is over a finite set of values $T\in\left\{1,\cdots,10\right\}$, and that is the only thing we know about it. As mentioned before, the uniform distribution is the one with the highest entropy (in other words, is most generic) on a finite support. This is the same distribution as we saw before! 
+For the deterministic model, the only unknown factor is when you arrive between the equally spaced busses. So, the distribution is over a finite set of values $T\in\left\{1,\cdots,10\right\}$, and that is the only thing we know about it. As mentioned before, the uniform distribution is the one with the highest entropy (in other words, is most generic) on a finite support. This is the same distribution as we saw before! 
 
-The fact that using the entropy of a distribution as way to choose our model is consistent with on of our arguments from earlier is reassuring. How about the noisy model with the geometric distribution? Well, for that we need to insert the fact that we know the mean of the distribution into this framework.
+The fact that using the entropy is consistent with our earlier arguments is reassuring. But, how about the infinite delay model, the one with the geometric distribution? Well, for that we need to insert the fact that we know the mean of the distribution into this framework.
 
 ## Adding Constraints
 
-Back to our problem at hand. We have a set of constraints and want to find the most general distribution possible that still satisfies these constraints. So, what were our constraints?
+Back to the problem at hand. We have a set of constraints and want to find the most general distribution possible that still satisfies these constraints. So, what were our constraints?
 
 1. The distribution is discrete $T\in\left\{1,\cdots,K\right\}$ (let's assume there are only finitely many values for now)
 2. The mean of the distribution is equal to $M$ 
@@ -224,7 +220,7 @@ $$
 \end{aligned}
 \end{equation}
 $$
-This looks like a lot. Unpacking the constraints, we have: $(I)$ the mean is equal to $M$ (the thing we started from), $(II)$ all of the probabilities are larger than 0 and $(III)$ the probabilities sum up to 1. Again, it looks quite complicated, but actually constraints $(II)$ and $(III)$ just make sure that $p_1,\cdots, p_K$ is a proper distribution.
+This looks like a lot. Unpacking the constraints, we have: $(I)$ the mean is equal to $M$ (where it all started), $(II)$ all of the probabilities are larger than 0 and $(III)$ the probabilities sum up to 1. Again, it looks quite complicated, but actually constraints $(II)$ and $(III)$ just make sure that $p_1,\cdots, p_K$ is a proper distribution.
 
 ---
 
@@ -233,11 +229,11 @@ This looks like a lot. Unpacking the constraints, we have: $(I)$ the mean is equ
 Honestly, solving the problem in equation \eqref{eq:maximization} doesn't look easy. Instead of directly trying to do so, it will be better to try and get some intuition of what's _actually_ happening.
 
 ## The Simplex
-As we saw, constraints $(II)$ and $(III)$ just make sure that we're maximizing over the set of proper distributions. But how does the space of all proper distributions look?
+As we saw, constraints $(II)$ and $(III)$ just make sure that we're maximizing over the set of proper distributions. But how what is this space of all proper distributions?
 
-When a random variable can take a finite set of values (again, the thing we're actually interested in) all possible distribution are inside the _simplex_. The simplex is the set of all vectors of length $K$ whose elements are nonnegative and sum up to 1 - exactly what we wanted.
+If a random variable can take a finite set of values (again, the thing we're actually interested in) all possible distribution are inside what is called the _simplex_. The simplex is the set of all vectors of length $K$ whose elements are nonnegative and sum up to 1 - does that sound familiar?
 
-Here's a concrete but simple example. Forget about the distribution of busses for a second, let's look at a random variable that can only take on 3 values, $X\in\{1, 2, 3\}$. All of the possible distributions over $X$ can be written as vectors of size 3:
+Here's a concrete but simple example. Forget about the distribution of busses for a second, let's look at a random variable that can only take on 3 values, $X\in\{1, 2, 3\}$. All possible distributions over $X$ can be written as vectors of size 3:
 $$
 \begin{equation}
 \left(\begin{matrix}P(X=1)\\P(X=2)\\P(X=3)\end{matrix}\right)=\left(\begin{matrix}p_1\\p_2\\p_3\end{matrix}\right)
@@ -250,9 +246,9 @@ $$
 p_3=1-p_1-p_2
 \end{equation}
 $$
-That way we know for sure that $p_1+p_2+p_3=1$.
+That way, we know for sure that $p_1+p_2+p_3=1$. So in fact, if $p_1$ and $p_2$ are known, $p_3$ can be deterministically set.
 
-So, the set of all 3 dimensional distributions can actually be visualized in 2 dimensions, and that is the simplex:
+So, the set of all 3-dimensional distributions can actually be visualized in 2 dimensions, the simplex:
 
 <div class="fake-img l-page">
 <p align="center">
@@ -269,7 +265,7 @@ src="https://friedmanroy.github.io/assets/blog_figs/MaxEntropy/simplex_3d.png"  
 
 ## Entropy with Constraints
 
-Visualizing the set of possible distributions in this manner allows us to easily overlay the entropy on top of the simplex. Remember, if there are no constraints, the uniform distribution (middle of the simplex) should have the highest entropy. This is exactly what happens:
+Visualizing the set of possible distributions in this manner allows us to easily overlay the entropy on top of the simplex:
 
 
 <div class="fake-img l-page">
@@ -279,10 +275,10 @@ src="https://friedmanroy.github.io/assets/blog_figs/MaxEntropy/simplex_entropy.p
 </p>
 </div>
 <div class="caption">
-    Plot of the entropy of each distribution in the 3-dimensional simplex; darker means higher entropy. Notice how the corners of the simplex have very low entropy, which gradually rises, finally peaking at the center of the simplex. The point with maximal entropy, where the star is, also happens to be the uniform distribution.
+    Plot of the entropy of each distribution in the 3-dimensional simplex; darker means higher entropy. Notice how the corners of the simplex have very low entropy, which gradually rises, finally peaking at the center of the simplex. The point with maximal entropy, where the star is, also happens to be the uniform distribution $(1/3,\ 1/3,\ 1/3)$.
 </div>
 
-We started all of this by saying we want to constrain the mean of the distribution to be equal to $M$. We can now directly visualize this, focusing our search to a specific region of the simplex:
+We started all of this by saying we want to constrain the mean of the distribution to be equal to $M$. We can now directly visualize this, focusing our search to a specific region on the simplex:
 
 <div class="fake-img l-page">
 <p align="center">
@@ -300,15 +296,15 @@ In fact, using this we can maximize the entropy under _any_ constrain we want an
 
 ## Boltzmann Distributions
 
-Okay, okay, so we have a basic intuition for what we're trying to do. Now, how do we find the maximum entropy distribution _mathematically_? 
+Okay, okay, so we have some basic intuition for what we're trying to do. Now, how do we find the maximum entropy distribution _mathematically_? 
 
-For now, let's restrict ourself constraints of the form<d-footnote>Actually, any constraint will work. However, this is a very common set of constraints (basically making sure some of the moments are equal to a specific value) and their solution has a very nice, general, form</d-footnote>:
+For now, let's restrict ourself constraints of the form<d-footnote>Actually, any constraint will work. However, this is a very common set of constraints (basically making sure some of the moments are equal to a specific value) and their solution takes on a very neat, general distribution.</d-footnote>:
 $$
 \begin{equation}
 \sum_x P(x)f(x)=F
 \end{equation}
 $$
-where $F$ is simply a number and $f(\cdot)$ is some function over the possible values of the random variable $X$. A possible example of $f(\cdot)$ is simply the identity function, in which case we get the constraint over the mean we have been talking about for so long. But, let's keep the notation a bit more general for now.
+where $F$ is simply a number and $f(\cdot)$ is some function over the possible values of the random variable $X$. A possible example of $f(\cdot)$ is simply the identity function, in which case we get the constraint over the mean we have been talking about for so long now. But, let's continue using the more general notation.
 
 To find the maximum, we need to use Lagrange multipliers. Under their framework, we define the following function:
 $$
@@ -316,7 +312,7 @@ $$
 \mathcal{L}\left(p_1,\cdots,p_K,\lambda,\gamma\right)=\underbrace{H(X)}_{\text{entropy}}-\lambda\cdot\left(\sum_x p_xf(x)-F\right)-\gamma\cdot\left(\sum_x p_x-1\right)
 \end{equation}
 $$
-If you haven't heard of Lagrange multipliers, all you need to know is that stationary points of $\mathcal{L}(\cdot)$ will also be stationary points of our constrained problem. These stationary points will (after some math) give us the following form for the distribution:
+If you haven't heard of Lagrange multipliers, all you need to know is that the stationary points of $\mathcal{L}(\cdot)$ will also be stationary points of our constrained problem. These stationary points will (after some math) give us the following form for the distribution:
 $$
 \begin{equation}
 P(X=x)=p_x=\frac{1}{Z}e^{\lambda f(x)}\qquad\quad Z=\sum_xe^{\lambda f(x)}
@@ -349,7 +345,7 @@ $$
 {%enddetails%}
 
 
-This distribution is called the _Boltzmann distribution_ and the normalization constant $Z$ is called the _partition function_ (it is a function of $\lambda$, _not_ of $x$)<d-footnote>The eagle-eyed readers will notice that this is exactly the definition of the <a href="https://en.wikipedia.org/wiki/Exponential_family#Entropy">exponential family of distributions</a>! In fact, every distribution from the exponential family maximizes the entropy under different moment constraints (and supports)</d-footnote>.
+This distribution is called the _Boltzmann distribution_ and the normalization constant $Z$ is called the _partition function_ (it _is_ a function, just of $\lambda$ _not_ of $x$)<d-footnote>The eagle-eyed readers will notice that this is exactly the definition of the <a href="https://en.wikipedia.org/wiki/Exponential_family#Entropy">exponential family of distributions</a>! In fact, every distribution from the exponential family maximizes the entropy under different moment constraints (and supports)</d-footnote>.
 
 The only problem is that we still have that pesky $\lambda$ stuck in there. We can find $\lambda$ by ensuring that our original constraint is satisfied:
 $$
@@ -443,9 +439,9 @@ which is exactly the definition of a geometric distribution with parameter $\the
 
 ## Back to Modeling Finite Delays
 
-Unfortunately, there is no closed form solution to the maximization problem in equation \eqref{eq:maximization}. So, if we want to model finite delays in our bus arrival distribution, we have to solve the maximization problem numerically. But we can analyze specific cases directly; this will become clear soon. These specific cases will give us at least some intuition for the general behavior of the solution.
+Unfortunately, there is no closed form solution to the maximization problem in equation \eqref{eq:maximization}. So, if we want to model finite delays in our bus arrival distribution, we have to solve the maximization problem numerically, except for a few settings. These specific cases will give us at least some intuition for the general behavior of the solution.
 
-Let's refresh our memory. We are trying to find a distribution over a random variable $T\in\left\{1,\cdots, T_{\text{max}}\right\}$ whose mean is equal to $M$. In the tardy bus setting, $M=10$ and $T_{\text{max}}$ is the largest number of minutes conceivable for the bus to be delayed. For instance, if there is no way that the bus can be an hour late, we can set $T_{\text{max}}=60$.  
+Let's refresh our memory. We are trying to find a distribution over a random variable $T\in\left\{1,\cdots, T_{\text{max}}\right\}$ whose mean is equal to $M$. In the tardy bus setting, $M=10$ and $T_{\text{max}}$ is the largest number of minutes conceivable for the bus to be delayed. For instance, if there is no way that the bus can be more than an hour late, we can set $T_{\text{max}}=60$.  
 
 From our earlier explorations, we saw that the max-entropy distribution under these constraints will be the Boltzmann distribution:
 $$
@@ -459,10 +455,10 @@ $$
 \frac{1}{Z}\sum_{t=1}^{T_{\text{max}}} t\cdot e^{\lambda t}=M
 \end{equation}
 $$
-Of course, such a solution only exists when $1\le M\le T_{\text{max}}$. 
+Of course, a solution only exists when $1\le M\le T_{\text{max}}$. 
 
 ### Both Sides of the Extreme
-Before using numerical methods, notice that when $M=1$ or $M=T_{\text{max}}$, we _can_ find an analytical solution. In both cases, the only distribution that satisfies equation \eqref{eq:mean-maxent} is an indicator:
+Before using numerical methods, notice that when $M=1$ or $M=T_{\text{max}}$, we _can_ find an analytical solution. In both cases, the only distribution that satisfies equation \eqref{eq:mean-maxent} is the indicator:
 $$
 \begin{equation}
 \begin{aligned}
@@ -472,7 +468,7 @@ M=T_{\text{max}}:&\quad P(T=t)=\begin{cases}0&t\neq T_{\text{max}}\\1&t=T_{\text
 \end{equation}
 $$
 
-What are the values of $\lambda$ that give us such a behavior? Well, let's start with the case when $M=1$ and look at our distribution once more:
+What are the values of $\lambda$ that give us such behaviors? Well, when $M=1$, we can rewrite our distribution as:
 $$
 \begin{equation}
 P(T=t)=\frac{e^{\lambda t}}{\sum_{\tau=1}^{T_{\text{max}}} e^{\lambda \tau}}=\frac{e^{\lambda t}}{e^{1\cdot\lambda}\cdot\left(1+\sum_{\tau=2}^{T_\text{max}e^{\lambda(\tau-1)}}\right)}=\frac{e^{\lambda(t-1)}}{1+\sum_{\tau=2}^{T_\text{max}e^{\lambda(\tau-1)}}}
@@ -556,7 +552,7 @@ src="https://friedmanroy.github.io/assets/blog_figs/MaxEntropy/all_models.png"  
 </p>
 </div>
 <div class="caption">
-    The distributions according to all of our models. In this setting, when $M=10$ and $T_\text{max}\gg M$, the noisy model (center) and finite delay model are quite similar. Notice, however, that they are not exactly the same. The max-entropy distribution assigns higher probability to early times than the geometric distribution.
+    The distributions according to all of our models. In this setting, when $M=10$ and $T_\text{max}\gg M$, the infinite delay model (center) and finite delay model are quite similar. Notice, however, that they are not exactly the same. The max-entropy distribution assigns higher probability to early times than the geometric distribution.
 </div>
 
 Playing around with the average time we expect the bus to arrive reveals more interesting behavior:
